--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <p>home works!</p>
 <a [routerLink]="['login']">To login page</a>
-
-<p>{{ myInfo$ | async | json }}</p>
+<pre *ngIf="myInfo$ | async as myInfo">
+    {{ myInfo.user.username }}
+</pre>
