--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,5 @@
 
 /* You can add global styles to this file, and also import other style files */
 body {
-    font-family: 'Noto Sans Thai', sans-serif;
+  font-family: "Noto Sans Thai", sans-serif;
 }
