--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -56,6 +56,7 @@
             nzType="primary"
             class="bg-claret-600 w-full"
             type="submit"
+            [nzLoading]="loadingService.visible | async"
           >
             Log me in!
           </button>
